used less specific selector for adding padding to landing page titles to prevent overlap with trigger [touch:906157198869671]

--- a/src/static/src/scss/pages/_landing.scss
+++ b/src/static/src/scss/pages/_landing.scss
@@ -34,18 +34,17 @@
       }
     }
   }
+
   // Make sure title text doesn't overlap dmb-panel-trigger
-  .dmb-section-with-media__col-content:first-of-type() {
-    .dmb-section-with-media__title {
-      padding-right: 50px;
+  .dmb-section-with-media__title {
+    padding-right: 50px;
 
-      @include bp(s) {
-        padding-right: 25px;
-      }
+    @include bp(s) {
+      padding-right: 25px;
+    }
 
-      @include bp(m) {
-        padding-right: 0;
-      }
+    @include bp(m) {
+      padding-right: 0;
     }
   }
 
